--- a/src/app/Components/equipments-view/equipments-view.component.html
+++ b/src/app/Components/equipments-view/equipments-view.component.html
@@ -26,7 +26,7 @@
 		<th mat-header-cell *matHeaderCellDef> Name </th>
 		<td mat-cell *matCellDef="let element"> 
 		  <mat-form-field floatLabel="never">
-			<input matInput placeholder="Name" [value]="element.name" [(ngModel)]="element.name">
+			<input matInput (onchange)="refresh()" placeholder="Name" [value]="element.name" [(ngModel)]="element.name">
 		  </mat-form-field>
 		</td>
 	  </ng-container>
