--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <button (click)="onClick()">Show me the data</button>
 <app-equipments-view [data]="equipments"></app-equipments-view>
-<app-checklist-view [data]="checklist"></app-checklist-view>
+<app-checklist-view [data]="checklist" [dataSelect]="equipments"></app-checklist-view>
