--- a/src/app/Components/equipments-view/equipments-view.component.html
+++ b/src/app/Components/equipments-view/equipments-view.component.html
@@ -5,7 +5,7 @@
 	<div class="form-group">
 		<label for="name">Name: </label>
 		<input id="name" type="text" class="form-control" formControlName="name">
-		<button class="btn btn-primary">Submit</button>
+		<button class="btn btn-primary">Добавить</button>
 	</div>
 </form>
 <div class="container">
